[package]
name = "fr"
version = "0.1.0"
edition = "2021"
authors = ["Laika <laika@albina.cc>"]
description = "Factorization Tool"
readme = "README.md"
repository = "https://github.com/Laika/FR"
license-file = "LICENSE"


[badges]
github = { repository = "Laika/FR", workflow = "Rust" }

[dependencies]
num = "0.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
clap = { version = "4.2.1", features = ["derive"] }

